# agent-implementation-skill

./: .gitignore  AGENTS.md  SKILL.md  audit.md  baseline.md  codebase_system_design.md  component-architecture.md  evaluate.md  implement.md  loop-contract.md  models.md  pyproject.toml  research.md  system-synthesis.md
.tmp/: agentic-evals-report.md  fix_remaining.py  rewrite_imports.py  system-reorganization.md
agent_implementation_skill.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/: agent-monitor.md  alignment-judge.md  coordination-planner.md  eval-judge.md  exception-handler.md  implementation-strategist.md  integration-proposer.md  microstrategy-writer.md  monitor.md  orchestrator.md  qa-monitor.md  section-re-explorer.md  state-detector.md  tool-registrar.md
docs/: cleanup-backlog.md
evals/: __init__.py  harness.py
governance/: README.md  risk-register.md  risk-register.md:Zone.Identifier
philosophy/: design-philosophy-analysis.md  design-philosophy-notes.md  region-profile-map.md
scripts/: codemap_build.py  db.sh  lint-audit-language.sh  lint-doc-drift.sh  mailbox.sh  scan.sh  section-loop.py  section_explore.py  structural-scan.py  task-agent-prompt.md  workflow.sh
src/: _config.py  containers.py
templates/: implement-proposal.md
tests/: _paths.py  conftest.py  test_agent_templates.py  test_alignment.py  test_change_detection.py  test_communication.py  test_coordination.py  test_cross_section.py  test_dispatch_meta_fail_closed.py  test_dispatch_signals.py  test_dispatch_status.py  test_dispatcher_section_scope.py  (+18 more)
(+547 files in other folders)
