[project]
name = "agent-implementation-skill"
version = "0.1.0"
description = "Multi-model agent implementation workflow for software development"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
logex = "log_extract.cli:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "src/scripts"]
